# Glitter

./: .gitignore  CMakeLists.txt
Glitter/Headers/: glitter.hpp
Glitter/Media/Shaders/: framebuffer_screen.frag  rectangle_3d.frag  rectangle_3d.vert  rectangle_box.frag  rectangle_box.vert  rectangle_trans.frag  rectangle_trans.vert  triangle_color.frag  triangle_color.vert
Glitter/Service/: Callback.h  Camera.h  ShaderMgr.h  Texture.cpp  Texture.h
Glitter/Sources/: main.cpp
Glitter/Sources/AdvancedOpenGL/: HelloFrameBufferObject.cpp  HelloFrameBufferObject.h
Glitter/Sources/GettingStart/HelloCamera/: HelloCamera.cpp
Glitter/Sources/GettingStart/HelloCoordSystem/: HelloCoordSystem.h
Glitter/Sources/GettingStart/HelloShader/: HelloShader.cpp  HelloShader.h
Glitter/Sources/GettingStart/HelloTexture/: HelloTexture.cpp  HelloTexture.h
Glitter/Sources/GettingStart/HelloTransform/: HelloTransform.cpp  HelloTransform.h
Glitter/Sources/GettingStart/HelloWindow/: HelloWindow.cpp
Glitter/Sources/HelloCamera/: HelloCamera.cpp  HelloCamera.h
Glitter/Sources/HelloCoordSystem/: HelloCoordSystem.cpp
Glitter/Sources/HelloShader/: HelloShader.cpp  HelloShader.h  ShaderMgr.cpp
Glitter/Sources/HelloTexture/: HelloTexture.cpp  HelloTextureExtend.cpp  HelloTextureExtend.h
Glitter/Sources/HelloTransform/: HelloTransform.cpp
Glitter/Sources/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.h  HelloTriangleExtend.cpp  HelloTriangleExtend.h
Glitter/Sources/HelloWindow/: HelloWindow.cpp  HelloWindow.h
Glitter/Sources/Lighting/HelloColor/: HelloColors.cpp  HelloColors.h
